[package]
name = "chrome-cache-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "chrome_cache_parser"

[[example]]
name = "display-chrome-cache"

[dependencies]
chrono = "0.4.38"
thiserror = "1.0.60"
zerocopy = { version = "0.7.34", features = ["derive"] }
static_assertions = "1.1.0"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"